[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "can_recompiler"
version = "1.0.0"
description = "CAN bus frame processing and reassembly library for automotive protocols"
readme = "README.md"
authors = [
    {name = "Firmware VDP Team", email = "firmware-vdp@samsara.com"}
]
license = "LicenseRef-Proprietary"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["can", "automotive", "iso-tp", "j1939", "uds", "obd", "diagnostics"]
requires-python = ">=3.8"
dependencies = [
    # Minimal dependencies - Databricks clusters already have pandas, numpy, etc.
    # For standalone usage, install with: pip install can_recompiler[standalone]
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]
standalone = [
    # For standalone usage outside of Databricks
    "pandas>=1.3.0,<2.4.0",  # Upper bound to avoid conflicts
]
dataweb = [
    # For use in DataWeb/Databricks (no additional deps needed)
    # All required packages already available in cluster environment
]

[project.urls]
"Homepage" = "https://github.com/samsaradev/backend"
"Documentation" = "https://samsaradev.atlassian.net/wiki/spaces/ENG/pages/can-decoder"
"Repository" = "https://github.com/samsaradev/backend"
"Bug Reports" = "https://github.com/samsaradev/backend/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["can_recompiler*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=can_recompiler --cov-report=html --cov-report=term-missing"